martin sos re gei

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <!--  PÁGINA DE PRUEBA - TODOS LOS ELEMENTOS   -->
 <!-- ========================================= -->
 
+<h1>martin se la come</h1>
 <div>
   <h1>Demostración de Elementos HTML</h1>
   <p>Este proyecto muestra una gran variedad de elementos HTML simples, compatibles con Angular.</p>
